--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,17 @@ code {
 button {
   display: block;
   width: 100px;
-  background: #fff;
+  background: #0084ff;
   padding: 10px 20px;
-  color: #999;
+  color: #fff;
   border-radius: 5px;
   margin-top: 10px;
+}
+
+input {
+  color: #333;
+  border: 1px solid #aaa;
+  border-radius: 4px;
 }
 
 .form-box {
